[gd_scene load_steps=48 format=3 uid="uid://smf75yfq1llx"]

[ext_resource type="Script" path="res://Scenes/TornadoDaMemoria/Level2/Scene3.gd" id="1_htirh"]
[ext_resource type="Texture2D" uid="uid://b1rpij5tbokek" path="res://Assets/wood-floor-texture.jpg" id="2_m2a8a"]
[ext_resource type="PackedScene" uid="uid://v3ankl06dpwe" path="res://Models/kitchencounter_straight_a_backsplash.tscn" id="3_f0r6m"]
[ext_resource type="PackedScene" uid="uid://qsx6ti0x7lj3" path="res://Models/kitchencounter_innercorner_backsplash.tscn" id="4_lklsw"]
[ext_resource type="PackedScene" uid="uid://4r3ylva07f66" path="res://Models/wall.tscn" id="5_1mrvl"]
[ext_resource type="PackedScene" uid="uid://cewv8iqxjvft3" path="res://Models/wall_window.tscn" id="6_o65pp"]
[ext_resource type="PackedScene" uid="uid://b7vclw7gmvpu7" path="res://Models/wall_half.tscn" id="7_ywy7g"]
[ext_resource type="PackedScene" uid="uid://chfeieccev0x" path="res://Assets/furniture_gltf/shelf_B_large.gltf" id="8_1srja"]
[ext_resource type="PackedScene" uid="uid://bpclk4oss07ra" path="res://Models/jar_a_medium_highlighted.tscn" id="9_427pl"]
[ext_resource type="PackedScene" uid="uid://dxk2xnnaqsm1r" path="res://Models/cactus_small_highlighted.tscn" id="10_4dqqc"]
[ext_resource type="PackedScene" uid="uid://c1dfsxcyjxcln" path="res://Models/pictureframe_standing_highlighted.tscn" id="11_gdty2"]
[ext_resource type="PackedScene" uid="uid://biydd40cbjkgb" path="res://Models/plate_dirty_highlighted.tscn" id="12_lyjpi"]
[ext_resource type="PackedScene" uid="uid://cgmjci3l4sd3y" path="res://Assets/restaurant_gltf/cuttingboard.gltf" id="13_n3le7"]
[ext_resource type="PackedScene" uid="uid://du2agx53isorv" path="res://Assets/restaurant_gltf/knife.gltf" id="14_yivwg"]
[ext_resource type="Theme" uid="uid://dsjyqvry1y226" path="res://ThemeEditor/menus_theme.tres" id="15_qmjj3"]
[ext_resource type="Texture2D" uid="uid://cnn3xdr0ywhc8" path="res://Assets/back_icon.png" id="16_1h1mr"]
[ext_resource type="Texture2D" uid="uid://d1otjyenwnjch" path="res://Assets/doctor_small.png" id="17_8uux4"]
[ext_resource type="Texture2D" uid="uid://bby7f4r51xmcq" path="res://Assets/doctor.png" id="18_n7l5o"]
[ext_resource type="AnimationLibrary" uid="uid://6wfnd4e8os6" path="res://ThemeEditor/Tornado.res" id="19_gu436"]
[ext_resource type="Script" path="res://Scenes/TornadoDaMemoria/TornadoAnimation.gd" id="20_jeptl"]
[ext_resource type="Texture2D" uid="uid://b44cm735rk4s2" path="res://Assets/glow_circle3.png" id="21_lh6oe"]
[ext_resource type="Texture2D" uid="uid://ec716c3waxhg" path="res://Assets/blur_white_dot40.png" id="22_4vl60"]
[ext_resource type="AudioStream" uid="uid://b7fq447cj33d4" path="res://Assets/wind-blowing-trimmed2.mp3" id="23_0vyoi"]
[ext_resource type="PackedScene" uid="uid://c3nxy0qc8sv25" path="res://Models/cactus_small_shadow.tscn" id="24_u85oy"]
[ext_resource type="PackedScene" uid="uid://dvs7ia6s74a76" path="res://Models/jar_a_medium_shadow.tscn" id="25_2k6r5"]
[ext_resource type="PackedScene" uid="uid://dwxnd2meex88p" path="res://Models/pictureframe_standing_shadow.tscn" id="26_cajph"]
[ext_resource type="PackedScene" uid="uid://btreb8xfqo1yu" path="res://Models/plate_dirty_shadow.tscn" id="27_lnk1p"]
[ext_resource type="Script" path="res://Scenes/TornadoDaMemoria/ObjectsAnimation.gd" id="28_4agjv"]
[ext_resource type="AudioStream" uid="uid://d1rxlluort1mq" path="res://Assets/fireworks2.mp3" id="29_pt4ra"]

[sub_resource type="BoxShape3D" id="BoxShape3D_b4xlg"]
size = Vector3(30, 1, 30)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iqnrd"]
albedo_texture = ExtResource("2_m2a8a")
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="BoxMesh" id="BoxMesh_bjeso"]
material = SubResource("StandardMaterial3D_iqnrd")
size = Vector3(80, 2, 80)

[sub_resource type="BoxShape3D" id="BoxShape3D_hasgb"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dodpu"]
height = 23.9366
radius = 2.51943

[sub_resource type="CylinderShape3D" id="CylinderShape3D_87e21"]
height = 1.04242

[sub_resource type="SphereShape3D" id="SphereShape3D_76743"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ya64y"]
size = Vector3(1.22241, 0.857666, 0.929688)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_y5ha8"]

[sub_resource type="Curve" id="Curve_qwrej"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 12.8571), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_8a0ia"]
max_value = 2.05
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.506494, 0.946154), 1.45833, 1.45833, 0, 0, Vector2(1, 2.05), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_m5bfx"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.00892866), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_qow0v"]
length = 0.001

[sub_resource type="Animation" id="Animation_tsw07"]
resource_name = "objects_moving"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Jar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.8, 2.6, 3.4, 4.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(3.56329, 6.96107, 0.342743), Vector3(-7.74313, 6.96107, 7.32184), Vector3(-16.3753, 11.3783, 1.97093), Vector3(-18.0317, 9.88181, -9.07389), Vector3(-11.8095, 1.32521, 2.86755)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Plate:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.8, 2.6, 3.4, 4.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(1.95087, 7.12834, 6.3027), Vector3(-3.31657, 11.1015, -3.91236), Vector3(-10.7742, 10.1641, -9.40638), Vector3(-10.7381, 16.0399, -12.1502), Vector3(-3.60884, 17.7479, -11.1513)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Jar/jar_A_medium2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 1.8, 2.6, 3.4, 4.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.439464, 0.621334, 0.175067), Vector3(-1.4577, 0.853745, 0.953885), Vector3(-0.633783, 0.738787, -0.466444), Vector3(-1.05186, -0.406863, -1.19113)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Plate/plate_dirty2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 1.8, 2.6, 3.4, 4.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.569639, 0.700822, 0.242728), Vector3(0.644793, -0.87311, -0.898515), Vector3(-0.216777, 0.799413, -0.367803), Vector3(0.321739, 0.893194, 0.749666)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cactus:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 1.0001, 1.8, 2.6, 3.4, 4.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-1.55242, 15.673, -9.76536), Vector3(-1.55242, 15.673, -9.76536), Vector3(2.40919, 18.0467, 0.517978), Vector3(-0.841839, 11.3134, 7.55675), Vector3(-8.48698, 8.33563, 5.65667), Vector3(-17.1908, 8.03763, -8.99744)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Cactus/cactus_small_A2:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 1.8, 2.6, 3.4, 4.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.55749, 0.0497826, -0.0614241), Vector3(-1.26394, -2.56285, -1.14487), Vector3(-0.52282, 1.17434, -0.268473), Vector3(-1.09752, -0.348715, -0.596074)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Picture:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1, 1.8, 2.6, 3.4, 4.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-6.00317, 15.8542, -13.281), Vector3(-6.00317, 11.6075, 5.48651), Vector3(-14.8747, 9.54466, 11.0225), Vector3(-16.9786, 12.134, -0.601186), Vector3(-2.87976, 8.51558, -0.601186)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Picture/pictureframe_standing_B2:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1, 1.8, 2.6, 3.4, 4.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.0223481, -0.103305, 0.0154927), Vector3(0.0832997, -0.986288, 0.925158), Vector3(-1.17912, -2.17469, 1.15907), Vector3(0.526513, 0.242811, -0.971619), Vector3(0.978915, -2.62967, 2.8947)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rkmve"]
_data = {
"RESET": SubResource("Animation_qow0v"),
"objects_moving": SubResource("Animation_tsw07")
}

[sub_resource type="Animation" id="Animation_kx2mp"]
resource_name = "play_feedback"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxContainer/Confetti:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-3.1, -0.1, 0.1, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s4n3x"]
_data = {
"play_feedback": SubResource("Animation_kx2mp")
}

[sub_resource type="Curve" id="Curve_s825t"]
_data = [Vector2(0.00865801, 0.197802), 0.0, 0.0, 0, 0, Vector2(0.982684, 0.879121), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Main" type="Node3D"]
script = ExtResource("1_htirh")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.00996, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_b4xlg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_bjeso")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.390804, -0.906769, -0.158252, 0.728786, -0.409831, 0.548553, -0.562267, 0.0990449, 0.821003, -26.0655, 34.8897, 25.4685)
shadow_enabled = true

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(0.70474, 0.359718, -0.61151, 0.0694738, 0.822797, 0.564073, 0.706056, -0.440008, 0.554867, 0, 0.490025, 2.9982)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, -2.08616e-07, 2.98023e-08, 2.98023e-08, 0.999848, -0.0174529, -2.98023e-08, 0.0174524, 0.999848, -5.02443, 7.71541, 26.4731)
projection = 1
size = 28.159

[node name="kitchencounter_straight_A_backsplash2" parent="." instance=ExtResource("3_f0r6m")]
transform = Transform3D(5.39687, 0, -4.3237, 0, 6.91525, 0, 4.3237, 0, 5.39687, -7.62386, 0, -6.74825)

[node name="kitchencounter_innercorner_backsplash2" parent="." instance=ExtResource("4_lklsw")]
transform = Transform3D(4.34047, 0, 5.38341, 0, 6.91525, 0, -5.38341, 0, 4.34047, -17.4103, 0, -14.6717)

[node name="kitchencounter_innercorner_backsplash3" parent="." instance=ExtResource("4_lklsw")]
transform = Transform3D(5.39688, 0, -4.3237, 0, 6.91525, 0, 4.3237, 0, 5.39688, 13.8729, 0, 10.351)

[node name="Counter" type="CharacterBody3D" parent="."]
transform = Transform3D(1.07937, 0, -0.864742, 0, 1.38305, 0, 0.864742, 0, 1.07937, 3.09881, 0, 1.73247)

[node name="kitchencounter_straight_A_backsplash3" parent="Counter" instance=ExtResource("3_f0r6m")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Counter"]
transform = Transform3D(11.3404, 0, 0, 0, 11.3404, 0, 0, 0, 11.3404, 0, 0, 0)
visible = false
shape = SubResource("BoxShape3D_hasgb")

[node name="wall2" parent="." instance=ExtResource("5_1mrvl")]
transform = Transform3D(5.96961, 0, -4.90001, 0, 7.7231, 0, 4.90001, 0, 5.96961, -11.0187, -0.343378, -21.3725)

[node name="wall_window_closed2" parent="." instance=ExtResource("6_o65pp")]
transform = Transform3D(5.96782, 0, -4.90202, 0, 7.723, 0, 4.90202, 0, 5.96782, 11.702, -0.343, -2.82479)

[node name="wall_half2" parent="." instance=ExtResource("7_ywy7g")]
transform = Transform3D(5.96782, 0, -4.90202, 0, 7.723, 0, 4.90202, 0, 5.96782, 22.486, -0.343, 5.92857)

[node name="Shelf" type="CharacterBody3D" parent="."]
transform = Transform3D(0.775143, 0, -0.631786, 0, 1, 0, 0.631786, 0, 0.775143, -4.94929, 15.0322, -13.4492)

[node name="shelf_B_large2" parent="Shelf" instance=ExtResource("8_1srja")]
transform = Transform3D(10.4484, 0, -1.19209e-07, 0, 8.95513, 0, 4.76837e-07, 0, 3.35496, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Shelf"]
transform = Transform3D(-0.130101, 0.988365, 0.0787941, -0.787161, -0.054641, -0.614322, -0.602869, -0.141947, 0.785111, 0, 0, 0)
visible = false
shape = SubResource("CylinderShape3D_dodpu")

[node name="Jar" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.56329, 6.96107, 0.342743)

[node name="jar_A_medium2" parent="Jar" instance=ExtResource("9_427pl")]
transform = Transform3D(6.01133, 0, 0, 0, 6.01133, 0, 0, 0, 6.01133, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Jar"]
transform = Transform3D(3.83554, 0, 0, 0, 3.83554, 0, 0, 0, 3.83554, 0, 1.91776, 0)
visible = false
shape = SubResource("CylinderShape3D_87e21")

[node name="Cactus" type="CharacterBody3D" parent="."]
transform = Transform3D(0.821886, 0, -0.569652, 0, 1, 0, 0.569652, 0, 0.821886, -1.55242, 15.673, -9.76536)

[node name="cactus_small_A2" parent="Cactus" instance=ExtResource("10_4dqqc")]
transform = Transform3D(6.44347, 0, 0, 0, 6.44347, 0, 0, 0, 6.44348, -0.201891, 0.055933, 0.437024)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cactus"]
transform = Transform3D(4.99524, 0, 0, 0, 4.99524, 0, 0, 0, 4.99524, -0.052619, 1.27448, -0.964126)
visible = false
shape = SubResource("SphereShape3D_76743")

[node name="Picture" type="CharacterBody3D" parent="."]
transform = Transform3D(4.05256, 0, -3.25834, 0, 5.2, 0, 3.25834, 0, 4.05256, -6.00317, 15.8542, -13.281)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Picture"]
transform = Transform3D(0.76581, 0, 1.19209e-07, 0, 0.76581, 0, -1.19209e-07, 0, 0.76581, -0.0414352, 0.152535, -0.167241)
visible = false
shape = SubResource("BoxShape3D_ya64y")

[node name="pictureframe_standing_B2" parent="Picture" instance=ExtResource("11_gdty2")]
transform = Transform3D(0.994585, -0.0131054, -0.103096, 0.0154882, 0.999631, 0.0223462, 0.102765, -0.023822, 0.99442, -0.0166812, 0.0037322, 0.0134123)

[node name="Plate" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.95087, 7.12834, 6.3027)

[node name="plate_dirty2" parent="Plate" instance=ExtResource("12_lyjpi")]
transform = Transform3D(4.65953, 0, 0, 0, 4.65953, 0, 0, 0, 4.65953, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Plate"]
transform = Transform3D(5.33182, 0, 0, 0, 0.766284, 0, 0, 0, 5.33182, 0, 0.675565, 0)
visible = false
shape = SubResource("CylinderShape3D_y5ha8")

[node name="cuttingboard2" parent="." instance=ExtResource("13_n3le7")]
transform = Transform3D(5.04567, 0, 0, 0, 5.04567, 0, 0, 0, 5.04567, -7.63721, 7.01071, -5.50782)

[node name="knife2" parent="." instance=ExtResource("14_yivwg")]
transform = Transform3D(2.58406, 2.16153, 0.0574886, -0.206539, 0.157566, 3.35937, 2.15241, -2.57989, 0.253338, -6.6092, 8.06963, -4.08488)

[node name="VoltarButton" type="Button" parent="."]
offset_left = 29.0
offset_top = 27.0
offset_right = 316.0
offset_bottom = 164.0
theme = ExtResource("15_qmjj3")
text = " Voltar"
icon = ExtResource("16_1h1mr")

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -342.0
offset_top = 27.0
offset_right = -20.0
offset_bottom = 112.0
grow_horizontal = 0
theme = ExtResource("15_qmjj3")
max_value = 5.0
show_percentage = false

[node name="AjudaButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -342.0
offset_top = -172.0
offset_right = -55.0
offset_bottom = -35.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("15_qmjj3")
text = " Ajuda"
icon = ExtResource("17_8uux4")

[node name="BoxContainer2" type="BoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Doctor" type="Sprite2D" parent="BoxContainer2"]
visible = false
position = Vector2(-347, -347)
texture = ExtResource("18_n7l5o")

[node name="Tornado" type="Area2D" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0.546421)
position = Vector2(50, 947)

[node name="TornadoAnimation" type="AnimationPlayer" parent="Tornado"]
root_node = NodePath("../..")
libraries = {
"Tornado": ExtResource("19_gu436")
}
script = ExtResource("20_jeptl")

[node name="tornado" type="CPUParticles2D" parent="Tornado"]
scale = Vector2(1, 0.5)
amount = 15
lifetime = 0.5
texture = ExtResource("21_lh6oe")
gravity = Vector2(0, -5000)
angular_velocity_min = -720.0
angular_velocity_max = -503.3
angular_velocity_curve = SubResource("Curve_qwrej")
scale_amount_curve = SubResource("Curve_8a0ia")

[node name="dots" type="CPUParticles2D" parent="Tornado"]
amount = 30
texture = ExtResource("22_4vl60")
emission_shape = 1
emission_sphere_radius = 20.0
spread = 180.0
gravity = Vector2(0, -300)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
orbit_velocity_min = 0.1
orbit_velocity_max = 0.1
linear_accel_min = 100.0
linear_accel_max = 100.0
scale_amount_curve = SubResource("Curve_m5bfx")

[node name="WindAudio" type="AudioStreamPlayer2D" parent="Tornado"]
stream = ExtResource("23_0vyoi")

[node name="Shadows" type="Node3D" parent="."]
visible = false

[node name="cactus_small_A2_shadow" parent="Shadows" instance=ExtResource("24_u85oy")]
transform = Transform3D(5.29541, 0, -3.67027, 0, 6.443, 0, 3.67027, 0, 5.29541, -1.55242, 15.673, -9.76536)

[node name="jar_A_medium_shadow" parent="Shadows" instance=ExtResource("25_2k6r5")]
transform = Transform3D(6.01133, 0, 0, 0, 6.01133, 0, 0, 0, 6.01133, 3.56329, 6.96107, 0.342743)

[node name="pictureframe_standing_shadow" parent="Shadows" instance=ExtResource("26_cajph")]
transform = Transform3D(4.27381, 0, -2.96219, 0, 5.2, 0, 2.96219, 0, 4.27381, -6.00317, 15.8542, -13.281)

[node name="plate_dirty_shadow" parent="Shadows" instance=ExtResource("27_lnk1p")]
transform = Transform3D(4.66, 0, 0, 0, 4.66, 0, 0, 0, 4.66, 1.95087, 7.12834, 6.3027)

[node name="ObjectsAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rkmve")
}
script = ExtResource("28_4agjv")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("29_pt4ra")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s4n3x")
}

[node name="BoxContainer" type="BoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Confetti" type="Node2D" parent="BoxContainer"]
modulate = Color(1, 1, 1, 0)

[node name="Green" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, -140)
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_s825t")
color = Color(0.34167, 0.527007, 0, 1)

[node name="Red" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, -140)
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_s825t")
color = Color(0.813426, 0.207508, 0.137518, 1)

[node name="Blue" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, -140)
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_s825t")
color = Color(0.19781, 0.466802, 0.776808, 1)

[node name="Yellow" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, -140)
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_s825t")
color = Color(0.794791, 0.780768, 0.238602, 1)

[node name="Green2" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, 181)
rotation = 3.14159
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_s825t")
color = Color(0.34167, 0.527007, 0, 1)

[node name="Red2" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, 181)
rotation = 3.14159
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_s825t")
color = Color(0.813426, 0.207508, 0.137518, 1)

[node name="Blue2" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, 181)
rotation = 3.14159
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_s825t")
color = Color(0.19781, 0.466802, 0.776808, 1)

[node name="Yellow2" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, 181)
rotation = 3.14159
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_s825t")
color = Color(0.794791, 0.780768, 0.238602, 1)

[connection signal="input_event" from="Counter" to="." method="_on_counter_input_event"]
[connection signal="input_event" from="Shelf" to="." method="_on_shelf_input_event"]
[connection signal="input_event" from="Jar" to="." method="_on_jar_input_event"]
[connection signal="input_event" from="Cactus" to="." method="_on_cactus_input_event"]
[connection signal="input_event" from="Picture" to="." method="_on_picture_input_event"]
[connection signal="input_event" from="Plate" to="." method="_on_plate_input_event"]
